--- a/writer-reader-android-client/gradle/libs.versions.toml
+++ b/writer-reader-android-client/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ paging= "3.3.4"
 ksp = "2.0.20-1.0.25"
 moshi = "1.15.1"
 pagingCommonAndroid = "3.3.4"
+uiDesktop = "1.7.0"
 
 
 [libraries]
@@ -50,6 +51,7 @@ retrofit-moshi = { group = "com.squareup.retrofit2", name = "converter-moshi", v
 androidx-paging = { group = "androidx.paging", name = "paging-compose", version.ref = "paging" }
 moshi-kotlin = { group = "com.squareup.moshi", name = "moshi-kotlin", version.ref = "moshi" }
 androidx-paging-common-android = { group = "androidx.paging", name = "paging-common-android", version.ref = "pagingCommonAndroid" }
+androidx-ui-desktop = { group = "androidx.compose.ui", name = "ui-desktop", version.ref = "uiDesktop" }
 
 
 
