--- a/writer-reader-web-client/package.json
+++ b/writer-reader-web-client/package.json
@@ -15,6 +15,8 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
     "mui-markdown": "^1.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
